MDEV-9862 Illegal mix of collation, when comparing column with CASE expression